--- a/Exe0002/exe02/index.html
+++ b/Exe0002/exe02/index.html
@@ -16,9 +16,9 @@
             <p>
                 <label for="number">Digite um numero:</label>
                 <input type="number" id='id_number' name="number">
+                <button onclick="confirm();" class="btn btn">Gerar Tabuada</button>
             </p>
-            <button onclick="confirm();" class="btn btn">Criar</button>
-        </div>
+            </div>
         <div id="id_resp">
         </div>
     </section>
